feat(github自动部署): 添加github workflow 自动部署

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -16,12 +16,24 @@ jobs:
           node-version: 16.14.0
           cache: npm
 
+      - uses: lannonbr/vsce-action@3.0.0
+        with:
+          args: publish -p $LOGIN_TOKEN
+        env:
+          LOGIN.TOKEN: ${{ secrets.LOGIN_TOKEN }}
+
       - run: |
-          npm i -g yarn vsce
-          yarn
-          vsce package
+          yarn install
+          vsce ls --no-yarn
+
+      - uses: actions/cache@v2
+        id: yarn-cache
+        with:
+          path: |
+            **/node_modules
 
       - uses: actions/upload-artifact@v2
+        continue-on-error: true
         with:
           path: |
             *.vsix
@@ -29,6 +41,7 @@ jobs:
             src
 
       - uses: softprops/action-gh-release@v1
+        continue-on-error: true
         with:
           files: |
             *.vsix
