--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "displayName": "Likan",
   "description": "这是一个对 vscode 所缺少的功能补全的插件...",
   "publisher": "likan",
-  "version": "0.7.46",
+  "version": "0.7.48",
   "repository": "https://github.com/LIiErkang/likan",
   "engines": {
     "vscode": "^1.66.0"
@@ -168,30 +168,29 @@
   "scripts": {
     "vscode:prepublish": "npm run package",
     "package": "cross-env NODE_ENV=production webpack --profile --progress",
-    "dev": "cross-env NODE_ENV=development webpack --watch",
+    "develop": "cross-env NODE_ENV=development webpack --watch",
     "release": "standard-version",
-    "commit": "git-cz"
+    "commit": "cz",
+    "prepare": "husky install"
   },
   "devDependencies": {
+    "@commitlint/cli": "^17.0.3",
+    "@commitlint/config-conventional": "^17.0.3",
     "@types/node": "14.x",
     "@types/vscode": "^1.66.0",
     "commitizen": "^4.2.5",
     "cross-env": "^7.0.3",
     "cz-conventional-changelog": "^3.3.0",
+    "eslint": "^8.22.0",
+    "husky": "^8.0.1",
     "prettier": "^2.7.1",
     "standard-version": "^9.5.0",
     "ts-loader": "^9.2.8",
     "ts-node": "^10.9.1",
     "typescript": "^4.5.5",
-    "vscode": "^1.1.37",
     "webpack": "^5.70.0",
     "webpack-cli": "^4.9.2"
   },
   "dependencies": {},
-  "config": {
-    "commitizen": {
-      "path": "cz-conventional-changelog"
-    }
-  },
   "standard-version": {}
 }
