--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -26,7 +26,8 @@
     "titleBar.activeForeground": "#e7e7e7",
     "titleBar.inactiveBackground": "#a7676c99",
     "titleBar.inactiveForeground": "#e7e7e799",
-    "tab.activeBorder": "#ba878b"
+    "tab.activeBorder": "#ba878b",
+    "commandCenter.border": "#e7e7e799"
   },
   "peacock.color": "#a7676c",
   "likan.npm.manager": "yarn"
