--- a/package.json
+++ b/package.json
@@ -178,6 +178,8 @@
     "@commitlint/config-conventional": "^17.0.3",
     "@types/node": "14.x",
     "@types/vscode": "^1.66.0",
+    "@typescript-eslint/eslint-plugin": "^5.33.0",
+    "@typescript-eslint/parser": "^5.33.0",
     "commitizen": "^4.2.5",
     "cross-env": "^7.0.3",
     "cz-conventional-changelog": "^3.3.0",
