--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "displayName": "Likan",
   "description": "这是一个对 vscode 所缺少的功能补全的插件...",
   "publisher": "likan",
-  "version": "0.7.48",
+  "version": "0.7.50",
   "repository": "https://github.com/LIiErkang/likan",
   "engines": {
     "vscode": "^1.66.0"
@@ -199,9 +199,5 @@
       "path": "cz-conventional-changelog"
     }
   },
-  "standard-version": {
-    "skip": {
-      "commit": true
-    }
-  }
+  "standard-version": {}
 }
