--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -3,7 +3,7 @@
   "tasks": [
     {
       "type": "npm",
-      "script": "dev",
+      "script": "develop",
       "isBackground": true,
       "problemMatcher": ["$ts-webpack-watch"],
 
