--- a/package.json
+++ b/package.json
@@ -26,6 +26,11 @@
         "category": "likan"
       },
       {
+        "command": "likan.statusbar.terminal",
+        "title": "切换显示终端",
+        "category": "likan"
+      },
+      {
         "command": "likan.language.openInBrowser",
         "title": "在默认浏览器打开",
         "icon": "$(globe)",
@@ -178,6 +183,7 @@
     "@commitlint/config-conventional": "^17.0.3",
     "@types/node": "14.x",
     "@types/vscode": "^1.66.0",
+    "@types/webpack-bundle-analyzer": "^4.4.1",
     "@typescript-eslint/eslint-plugin": "^5.33.0",
     "@typescript-eslint/parser": "^5.33.0",
     "commitizen": "^4.2.5",
@@ -191,6 +197,7 @@
     "ts-node": "^10.9.1",
     "typescript": "^4.5.5",
     "webpack": "^5.70.0",
+    "webpack-bundle-analyzer": "^4.5.0",
     "webpack-cli": "^4.9.2"
   },
   "dependencies": {},
