--- a/package.json
+++ b/package.json
@@ -190,6 +190,9 @@
     "cross-env": "^7.0.3",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.22.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-simple-import-sort": "^7.0.0",
     "husky": "^8.0.1",
     "prettier": "^2.7.1",
     "standard-version": "^9.5.0",
@@ -200,7 +203,9 @@
     "webpack-bundle-analyzer": "^4.5.0",
     "webpack-cli": "^4.9.2"
   },
-  "dependencies": {},
+  "dependencies": {
+    "open": "^8.4.0"
+  },
   "config": {
     "commitizen": {
       "path": "cz-conventional-changelog"
