fix(修复运行命令的bug): 修复运行命令时额外的前缀bug

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,26 +9,26 @@
   },
   "typescript.tsc.autoDetect": "off",
   "workbench.colorCustomizations": {
-    "activityBar.activeBackground": "#ba878b",
+    "activityBar.activeBackground": "#7ac02d",
     "activityBar.activeBorder": "#c4dcc2",
-    "activityBar.background": "#ba878b",
+    "activityBar.background": "#7ac02d",
     "activityBar.foreground": "#15202b",
     "activityBar.inactiveForeground": "#15202b99",
-    "activityBarBadge.background": "#c4dcc2",
-    "activityBarBadge.foreground": "#15202b",
-    "sash.hoverBorder": "#ba878b",
-    "statusBar.background": "#a7676c",
+    "activityBarBadge.background": "#2a73b5",
+    "activityBarBadge.foreground": "#e7e7e7",
+    "sash.hoverBorder": "#7ac02d",
+    "statusBar.background": "#609723",
     "statusBar.foreground": "#e7e7e7",
-    "statusBarItem.hoverBackground": "#ba878b",
-    "statusBarItem.remoteBackground": "#a7676c",
+    "statusBarItem.hoverBackground": "#7ac02d",
+    "statusBarItem.remoteBackground": "#609723",
     "statusBarItem.remoteForeground": "#e7e7e7",
-    "titleBar.activeBackground": "#a7676c",
+    "titleBar.activeBackground": "#609723",
     "titleBar.activeForeground": "#e7e7e7",
-    "titleBar.inactiveBackground": "#a7676c99",
+    "titleBar.inactiveBackground": "#60972399",
     "titleBar.inactiveForeground": "#e7e7e799",
-    "tab.activeBorder": "#ba878b",
+    "tab.activeBorder": "#7ac02d",
     "commandCenter.border": "#e7e7e799"
   },
-  "peacock.color": "#a7676c",
+  "peacock.color": "#609723",
   "likan.npm.manager": "yarn"
 }
