--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -18,13 +18,13 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 16.14.0
-          cache: "npm"
+          cache: 'npm'
 
       - run: yarn install
 
       - uses: lannonbr/vsce-action@3.0.0
         with:
-          args: "publish -p $LOGIN_TOKEN --no-yarn"
+          args: 'publish -p $LOGIN_TOKEN --no-yarn'
 
       - run: yarn run package
 
