--- a/package.json
+++ b/package.json
@@ -174,10 +174,10 @@
     "vscode:prepublish": "npm run package",
     "package": "cross-env NODE_ENV=production webpack --profile --progress",
     "develop": "cross-env NODE_ENV=development webpack --watch",
+    "preview": "cross-env NODE_ENV=test webpack --profile --progress",
     "release": "standard-version",
     "commit": "cz",
-    "prepare": "husky install",
-    "preview": "cross-env NODE_ENV=test webpack --profile --progress"
+    "prepare": "husky install"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.0.3",
