--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "Likan",
   "displayName": "Likan",
   "description": "这是一个对 vscode 所缺少的功能补全的插件...",
-  "publisher": "lirkang",
-  "version": "0.7.64",
+  "publisher": "Likan",
+  "version": "0.7.65",
   "author": {
     "name": "likan"
   },
