--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "displayName": "Likan",
   "description": "这是一个对 vscode 所缺少的功能补全的插件...",
   "publisher": "Likan",
-  "version": "0.7.66",
+  "version": "0.7.67",
   "author": {
     "name": "likan"
   },
@@ -217,6 +217,7 @@
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.7.1",
+    "sharp": "^0.30.7",
     "standard-version": "^9.5.0",
     "ts-loader": "^9.2.8",
     "typescript": "^4.5.5",
@@ -232,5 +233,10 @@
       "path": "cz-conventional-changelog"
     }
   },
-  "standard-version": {}
+  "standard-version": {},
+  "volta": {
+    "node": "16.13.0",
+    "yarn": "1.22.11",
+    "npm": "8.18.0"
+  }
 }
