--- a/package.json
+++ b/package.json
@@ -217,6 +217,7 @@
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.7.1",
+    "sharp": "^0.30.7",
     "standard-version": "^9.5.0",
     "ts-loader": "^9.2.8",
     "typescript": "^4.5.5",
