--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,7 +2,7 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "args": ["--extensionDevelopmentPath=${workspaceFolder}"],
+      "args": ["--extensionDevelopmentPath=${workspaceFolder}", /* "--disable-extensions" */],
       "name": "Launch Extension",
       "outFiles": ["${workspaceFolder}/lib/index.js"],
       "preLaunchTask": "${defaultBuildTask}",
