feat: htmlwrap支持多光标

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,27 +9,27 @@
   },
   "typescript.tsc.autoDetect": "off",
   "workbench.colorCustomizations": {
-    "activityBar.activeBackground": "#7ac02d",
+    "activityBar.activeBackground": "#61ae63",
     "activityBar.activeBorder": "#c4dcc2",
-    "activityBar.background": "#7ac02d",
+    "activityBar.background": "#61ae63",
     "activityBar.foreground": "#15202b",
     "activityBar.inactiveForeground": "#15202b99",
-    "activityBarBadge.background": "#2a73b5",
-    "activityBarBadge.foreground": "#e7e7e7",
-    "sash.hoverBorder": "#7ac02d",
-    "statusBar.background": "#609723",
+    "activityBarBadge.background": "#eaeaf4",
+    "activityBarBadge.foreground": "#15202b",
+    "sash.hoverBorder": "#61ae63",
+    "statusBar.background": "#4b914c",
     "statusBar.foreground": "#e7e7e7",
-    "statusBarItem.hoverBackground": "#7ac02d",
-    "statusBarItem.remoteBackground": "#609723",
+    "statusBarItem.hoverBackground": "#61ae63",
+    "statusBarItem.remoteBackground": "#4b914c",
     "statusBarItem.remoteForeground": "#e7e7e7",
-    "titleBar.activeBackground": "#609723",
+    "titleBar.activeBackground": "#4b914c",
     "titleBar.activeForeground": "#e7e7e7",
-    "titleBar.inactiveBackground": "#60972399",
+    "titleBar.inactiveBackground": "#4b914c99",
     "titleBar.inactiveForeground": "#e7e7e799",
-    "tab.activeBorder": "#7ac02d",
+    "tab.activeBorder": "#61ae63",
     "commandCenter.border": "#e7e7e799"
   },
-  "peacock.color": "#609723",
-  "likan.npm.manager": "yarn",
+  "peacock.color": "#4b914c",
+  "likan.string.manager": "yarn",
   "svg.preview.background": "black"
 }
