feat: 新增快速打开项目

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,7 +2,7 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "args": ["--extensionDevelopmentPath=${workspaceFolder}" /*, "--disable-extensions" */],
+      "args": ["--extensionDevelopmentPath=${workspaceFolder}", "--disable-extensions"],
       "name": "Launch Extension",
       "outFiles": ["${workspaceFolder}/lib/index.js"],
       "preLaunchTask": "${defaultBuildTask}",
