feat: 优化随机窗口颜色

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,27 +9,26 @@
   },
   "typescript.tsc.autoDetect": "off",
   "workbench.colorCustomizations": {
-    "activityBar.activeBackground": "#61ae63",
+    "activityBar.activeBackground": "#a79813",
     "activityBar.activeBorder": "#c4dcc2",
-    "activityBar.background": "#61ae63",
+    "activityBar.background": "#a79813",
     "activityBar.foreground": "#15202b",
     "activityBar.inactiveForeground": "#15202b99",
-    "activityBarBadge.background": "#eaeaf4",
+    "activityBarBadge.background": "#70efe2",
     "activityBarBadge.foreground": "#15202b",
-    "sash.hoverBorder": "#61ae63",
-    "statusBar.background": "#4b914c",
+    "sash.hoverBorder": "#a79813",
+    "statusBar.background": "#796e0e",
     "statusBar.foreground": "#e7e7e7",
-    "statusBarItem.hoverBackground": "#61ae63",
-    "statusBarItem.remoteBackground": "#4b914c",
+    "statusBarItem.hoverBackground": "#a79813",
+    "statusBarItem.remoteBackground": "#796e0e",
     "statusBarItem.remoteForeground": "#e7e7e7",
-    "titleBar.activeBackground": "#4b914c",
+    "titleBar.activeBackground": "#796e0e",
     "titleBar.activeForeground": "#e7e7e7",
-    "titleBar.inactiveBackground": "#4b914c99",
+    "titleBar.inactiveBackground": "#796e0e99",
     "titleBar.inactiveForeground": "#e7e7e799",
-    "tab.activeBorder": "#61ae63",
     "commandCenter.border": "#e7e7e799"
   },
-  "peacock.color": "#4b914c",
+  "peacock.color": "#796e0e",
   "likan.string.manager": "yarn",
   "svg.preview.background": "black"
 }
