--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,24 +9,25 @@
   },
   "typescript.tsc.autoDetect": "off",
   "workbench.colorCustomizations": {
-    "activityBar.activeBackground": "#a79813",
-    "activityBar.activeBorder": "#c4dcc2",
-    "activityBar.background": "#a79813",
-    "activityBar.foreground": "#15202b",
-    "activityBar.inactiveForeground": "#15202b99",
-    "activityBarBadge.background": "#70efe2",
-    "activityBarBadge.foreground": "#15202b",
-    "sash.hoverBorder": "#a79813",
-    "statusBar.background": "#796e0e",
-    "statusBar.foreground": "#e7e7e7",
-    "statusBarItem.hoverBackground": "#a79813",
-    "statusBarItem.remoteBackground": "#796e0e",
-    "statusBarItem.remoteForeground": "#e7e7e7",
-    "titleBar.activeBackground": "#796e0e",
-    "titleBar.activeForeground": "#e7e7e7",
-    "titleBar.inactiveBackground": "#796e0e99",
-    "titleBar.inactiveForeground": "#e7e7e799",
-    "commandCenter.border": "#e7e7e799"
+    "activityBar.activeBackground": "#357e7dff",
+    "activityBar.activeBorder": "#357e7dff",
+    "activityBar.background": "#357e7dff",
+    "activityBar.foreground": "#b3cfceff",
+    "activityBar.inactiveForeground": "#81afaeff",
+    "activityBarBadge.background": "#035e5dff",
+    "activityBarBadge.foreground": "#b3cfceff",
+    "sash.hoverBorder": "#9abfbeff",
+    "statusBar.background": "#1c6e6dff",
+    "statusBar.foreground": "#b3cfceff",
+    "statusBarItem.hoverBackground": "#4f8e8eff",
+    "statusBarItem.remoteBackground": "#1c6e6dff",
+    "statusBarItem.remoteForeground": "#b3cfceff",
+    "titleBar.activeBackground": "#1c6e6dff",
+    "titleBar.activeForeground": "#b3cfceff",
+    "titleBar.inactiveBackground": "#357e7dff",
+    "titleBar.inactiveForeground": "#9abfbeff",
+    "tab.activeBorder": "#689e9eff",
+    "commandCenter.border": "#9abfbeff"
   },
   "peacock.color": "#796e0e",
   "likan.string.manager": "yarn",
