--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -15,23 +15,34 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
+      - uses: actions/cache@v2
+        id: yarn-cache
+        with:
+          path: |
+            **/node_modules
+            **/.eslintcache
+            ${{ steps.yarn-cache-dir-path.outputs.dir }}
+
+          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-yarn-
+
       - uses: actions/setup-node@v3
         with:
-          node-version: 16.14.0
-          cache: 'npm'
+          node-version: 16.17.0
+          cache: "npm"
 
       - run: yarn install
 
       - uses: lannonbr/vsce-action@3.0.0
         with:
-          args: 'publish -p $LOGIN_TOKEN --no-yarn'
+          args: "publish -p $LOGIN_TOKEN --no-yarn"
 
       - run: yarn run package
 
       - uses: actions/upload-artifact@v2
         with:
           path: |
-            *.vsix
             lib
             src
 
