--- a/package.json
+++ b/package.json
@@ -53,12 +53,6 @@
         "category": "likan"
       },
       {
-        "command": "likan.open.workspace",
-        "title": "选择项目",
-        "shortTitle": "快速搜索打开项目",
-        "category": "likan"
-      },
-      {
         "command": "likan.open.browser",
         "title": "在默认浏览器打开",
         "icon": "$(globe)",
@@ -66,8 +60,13 @@
         "enablement": "resourceLangId == html || resourceLangId == htm"
       },
       {
-        "command": "likan.open.window",
+        "command": "likan.open.currentWindow",
         "title": "在新窗口中打开",
+        "category": "likan"
+      },
+      {
+        "command": "likan.open.newWindow",
+        "title": "在当前窗口中打开",
         "category": "likan"
       },
       {
@@ -84,7 +83,24 @@
         "enablement": "resourceLangId == javascript || resourceLangId == typescript || resourceLangId == javascriptreact || resourceLangId == typescriptreact"
       }
     ],
+    "views": {
+      "explorer": [
+        {
+          "id": "likan-explorer",
+          "name": "Explorer"
+        }
+      ]
+    },
     "menus": {
+      "view/item/context": [
+        {
+          "command": "likan.open.newWindow"
+        },
+        {
+          "command": "likan.open.currentWindow"
+        }
+      ],
+      "view/title": [],
       "editor/title": [
         {
           "command": "likan.open.browser",
@@ -104,7 +120,7 @@
           "when": "resourceLangId == html || resourceLangId == htm"
         },
         {
-          "command": "likan.open.window",
+          "command": "likan.open.currentWindow",
           "group": "navigation@1"
         }
       ],
@@ -182,7 +198,7 @@
         },
         "likan.list.alias": {
           "type": "object",
-          "description": "路径跳转和路径提示(暂未开发)的别名映射, ${root}代表工作区根目录",
+          "description": "路径跳转的别名映射, ${root}代表工作区根目录",
           "default": {
             "@": "${root}/src",
             "~": "${root}"
@@ -190,7 +206,16 @@
         },
         "likan.list.folders": {
           "type": "array",
-          "description": "打开项目时需要检索的目录"
+          "description": "explorer需要检索的目录"
+        },
+        "likan.list.filterFolders": {
+          "type": "array",
+          "description": "explorer中过滤的关键字",
+          "default": [
+            "node_modules",
+            ".vscode",
+            ".git"
+          ]
         }
       }
     },
